--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
 
     //Navigation Bar
     <string name="history">History</string>
-    <string name="set_locations">Locations</string>
+    <string name="set_locations">Add Locations</string>
+    <string name="change_locations">Edit Locations</string>
     <string name="Home">Home</string>
+    <string name="settings">Settings</string>
     <string name="navigation_drawer_open">Open Navigation Drawer</string>
     <string name="navigation_drawer_close">Close Navigation Drawer</string>
 
@@ -19,4 +21,10 @@
 
     //Map
     <string name="title_activity_maps">Map</string>
+
+    //Settings
+    <string name="name">Name:</string>
+
+
+
 </resources>
