--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="name">Name:</string>
     <string name="how_are_you_today">How are you today?</string>
     <string name="x">X</string>
-    <string name="shakes_today">Shakes Today:</string>
+    <string name="shakes_today">Today\'s Jitteriness: </string>
     <string name="refresh">Refresh</string>
 
 
